--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,46 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="scotchApp">
 <head>
-    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="../bower_components/components-font-awesome/css/font-awesome.min.css"/>
+
+    <script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-resource/angular-resource.min.js"></script>
+    <script type="text/javascript" src="../bower_components/lodash/lodash.min.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-translate/angular-translate.min.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
+    <script type="text/javascript" src="../app/script.js"></script>
 </head>
-<body ng-app="myApp">
-<div class="container" ng-controller="AppController">
-    <div class="page-header">
-        <h1>A checklist</h1>
-    </div>
-    <div class="alert alert-info" role="alert" ng-hide="items && items.length > 0">
-        There are no items yet.
-    </div>
-    <form class="form-horizontal" role="form" ng-submit="addItem(newItem)">
-        <div class="form-group" ng-repeat="item in items">
-            <div class="checkbox col-xs-9">
-                <label>
-                    <input type="checkbox" ng-model="item.checked" ng-change="updateItem(item)"/> {{item.description}}
-                </label>
-            </div>
-            <div class="col-xs-3">
-                <button class="pull-right btn btn-danger" type="button" title="Delete"
-                        ng-click="deleteItem(item)">
-                    <span class="glyphicon glyphicon-trash"></span>
-                </button>
+<body ng-controller="mainController">
+
+<header>
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/"> Angular Routing Example </a>
             </div>
         </div>
-        <hr />
-        <div class="input-group">
-            <input type="text" class="form-control" ng-model="newItem" placeholder="Enter the description..." />
-          <span class="input-group-btn">
-            <button class="btn btn-default" type="submit" ng-disabled="!newItem" title="Add">
-                <span class="glyphicon glyphicon-plus"></span>
-            </button>
-          </span>
-        </div>
-    </form>
+
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="#"><i class="fa fa-home"></i>Home</a></li>
+            <li><a href="#about"><i class="fa fa-shield"></i>About</a></li>
+            <li><a href="#contact"><i class="fa fa-comment"></i>Contact</a></li>
+        </ul>
+    </nav>
+
+</header>
+<div id="main">
+    {{message}}
+
+    <div ng-view></div>
 </div>
-<script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
-<script type="text/javascript" src="../bower_components/angular-resource/angular-resource.min.js"></script>
-<script type="text/javascript" src="../bower_components/lodash/lodash.min.js"></script>
-<script type="text/javascript" src="../app/app.js"></script>
-<script type="text/javascript" src="../app/controllers.js"></script>
-<script type="text/javascript" src="../app/services.js"></script>
+
 </body>
 </html>
